--- a/src/platform/qt/SettingsView.ui
+++ b/src/platform/qt/SettingsView.ui
@@ -199,12 +199,15 @@
        <item row="6" column="1">
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
-          <widget class="QSpinBox" name="fpsTarget">
+          <widget class="QDoubleSpinBox" name="fpsTarget">
+           <property name="minimum">
+            <double>0.010000000000000</double>
+           </property>
            <property name="maximum">
-            <number>240</number>
+            <double>240.000000000000000</double>
            </property>
            <property name="value">
-            <number>60</number>
+            <double>60.000000000000000</double>
            </property>
           </widget>
          </item>
