Qt: Fix windows being resizable when they shouldn't have been

--- a/src/platform/qt/GIFView.ui
+++ b/src/platform/qt/GIFView.ui
@@ -14,6 +14,9 @@
    <string>Record GIF</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="sizeConstraint">
+    <enum>QLayout::SetFixedSize</enum>
+   </property>
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="0">
