--- a/src/platform/qt/SettingsView.ui
+++ b/src/platform/qt/SettingsView.ui
@@ -355,7 +355,7 @@
        <item row="6" column="0">
         <widget class="QLabel" name="label_8">
          <property name="text">
-          <string>Rewind length:</string>
+          <string>Rewind history:</string>
          </property>
         </widget>
        </item>
