--- a/src/platform/qt/SettingsView.ui
+++ b/src/platform/qt/SettingsView.ui
@@ -327,7 +327,7 @@
        <item row="5" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>Rewind snapshot:</string>
+          <string>Create rewind state:</string>
          </property>
         </widget>
        </item>
@@ -346,7 +346,7 @@
          <item>
           <widget class="QLabel" name="label_6">
            <property name="text">
-            <string>frames</string>
+            <string>states</string>
            </property>
           </widget>
          </item>
