--- a/src/platform/qt/SettingsView.ui
+++ b/src/platform/qt/SettingsView.ui
@@ -327,7 +327,7 @@
        <item row="5" column="0">
         <widget class="QLabel" name="label_4">
          <property name="text">
-          <string>Rewind interval:</string>
+          <string>Create rewind state:</string>
          </property>
         </widget>
        </item>
@@ -355,7 +355,7 @@
        <item row="6" column="0">
         <widget class="QLabel" name="label_8">
          <property name="text">
-          <string>Rewind length:</string>
+          <string>Rewind history:</string>
          </property>
         </widget>
        </item>
@@ -367,7 +367,7 @@
          <item>
           <widget class="QLabel" name="label_7">
            <property name="text">
-            <string>intervals</string>
+            <string>states</string>
            </property>
           </widget>
          </item>
