--- a/src/platform/qt/IOViewer.ui
+++ b/src/platform/qt/IOViewer.ui
@@ -372,7 +372,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widget" native="true">
+    <widget class="QWidget" name="regDescription" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
        <horstretch>0</horstretch>
