--- a/src/platform/qt/IOViewer.ui
+++ b/src/platform/qt/IOViewer.ui
@@ -14,6 +14,9 @@
    <string>I/O Viewer</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <property name="sizeConstraint">
+    <enum>QLayout::SetFixedSize</enum>
+   </property>
    <item>
     <widget class="QComboBox" name="regSelect"/>
    </item>
