Qt: Finish up shader selector

--- a/src/platform/qt/ShaderSelector.ui
+++ b/src/platform/qt/ShaderSelector.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>378</width>
+    <width>386</width>
     <height>350</height>
    </rect>
   </property>
@@ -104,7 +104,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Ok|QDialogButtonBox::Reset|QDialogButtonBox::RestoreDefaults|QDialogButtonBox::Save</set>
      </property>
     </widget>
    </item>
